--- a/public/css/style.css
+++ b/public/css/style.css
@@ -1085,3 +1085,25 @@ footer a:hover {
 .day-remaining {
     color: #fff;
 }
+section#setting div#upgrade .modal-content {
+    width: 100%;
+    margin: 1rem auto 0;
+    border-radius: 8px;
+    padding: 20px;
+}
+section#setting div#upgrade .modal-body {
+    position: relative;
+    flex: 1 1 auto;
+    padding: 0.5rem 1rem;
+}
+section#setting div#upgrade .modal-body p {
+    font-size: 13px;
+}
+section#setting div#upgrade .modal-footer {
+    border-top: 0px solid #dee2e6 !important;
+    padding: 0rem;
+}
+section#setting div#upgrade .modal-dialog {
+    max-width: 500px;
+    margin: 1.75rem auto;
+}
